--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "dev:docker": "docker build --build-arg ENVIRONMENT=DEV -t nextjs-docker . && docker run -p 3000:3000 nextjs-docker"
   },
   "dependencies": {
     "@buf/motiong-io_motiongapis.connectrpc_es": "^1.4.0-20240625063040-6a6d8c601346.3",
